[package]
authors = ["Jaffe2718 <qqyttwqeei@163.com>"]
build = "build.rs"
name = "xblock"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version="1.4.4", features = ["fltk-bundled"]}
rand = "0.8.5"
rodio = "0.17.1"

[build-dependencies]
embed-resource = "1.8.0"

[profile.release]   # release profile
opt-level = 'z'     # optimize for size
lto = true          # enable link-time optimization
codegen-units = 1   # compile everything in one codegen unit
panic = 'abort'     # abort on panic
strip = true        # strip symbols from the output
